syntax = "proto3";

service TmService {
    rpc PropagateLease (Lease) returns (PropagateResponse);
    rpc PropagateTransaction (Transaction) returns (PropagateResponse);
    rpc ReleaseLease (ObjectsNeeded) returns (PropagateResponse);
}

message ObjectsNeeded {
    repeated string dadInt = 1;
}

message Lease {
    repeated string value = 1;
    string leaseId = 2;
}

message PropagateResponse {
    bool ack = 1;
}

message Transaction {
    repeated DadIntObj transactions = 1;
    string transactionId = 2;
}

message DadIntObj {
    string key = 1;
    int64 value = 2;
}

